Use existing Maven BootstrapSessionListener to hint Surefire about required JVM parameters